@@ -1,0 +1,2 @@
+MD5 bedae3af6a8824cede6567e54d23dd36 vdrplugin-graphlcd-0.0.7.ebuild 1304
+MD5 83c3207ffafa8cfc6652275f18dcb5b3 files/digest-vdrplugin-graphlcd-0.0.7 67
